# agent-trust

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  PRD.md  README.md  STATE.md  docker-compose.yml  main.py  pyproject.toml  server.json
.github/workflows/: ci.yml  deploy.yml  publish.yml
.hypothesis/constants/: 06ab38fe867a1f95  1181312d85112148  165d74a042633c3a  1a8c7a81af89595b  1bd75dff5b5ec00a  23def5937fc4d2a3  318e2a5e007b53b1  39fdfba89de2528c  409570d79a35da17  4ff607c94af6798b  509e9a7112f4b364  51b3916b7c9a6083  57d45edccc917dbd  59c1c8901f2fdc3f  5b3a33e6f2302e70  5e7f6960b7772746  612bf5c62d696347  6c5f0b778c7d3bb0  73c4dcb6389313a9  79cef4b6e7091624  7d33c86324e25e47  7e2185a13045a656  80964ab8fa4647f1  8112adcfba48c4f5  82f5a8d57831f382  8d4327617690dc62  93f1381f125d04c6  9a015e523daf0e58  9df8bfc6aa9309d0  9ec7e1841a167d38  a094ad1d98f38dd4  b6e392373ac82389  bb3c5c499f3013e4  bcad7ce1048446dd  cbf4394d561dae68  d0798f0c54aaac4c  d3df2a168eeb2816  d98695a264ed77bc  dc3602891f0e12e8  dc4828aa66aba81d  (+4 more)
alembic/: env.py
alembic/versions/: 52db06c8cbdd_initial_schema.py  a13d97533c44_add_delegated_by_to_agents.py  b7e3f1a2c456_add_delegation_cycle_check_trigger.py
docs/: interaction-scoring.md  testing-with-mcp-inspector.md
docs/reports/: 20260318-01-audit-report.md  20260318-02-audit-report.md  (+1 more)
monitoring/: prometheus.yml
scripts/: generate_agent_token.py  generate_keypair.py  register_scopes.py  run_worker.py  seed_test_agents.py
tests/: conftest.py  factories.py  test_logging_config.py  test_ratelimit.py
(+79 files in other folders)
